--- a/HUANTANKICHU/index.html
+++ b/HUANTANKICHU/index.html
@@ -78,7 +78,7 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <div class="heading">
-            <h3><span>About us</span></h3>
+            <h3><span>Sobre Nosotros</span></h3>
           </div>
           <div class="sub-heading">
             <p>
