--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
-          <li><a href="#about">About Us</a></li>
+          <li><a href="#about">SOBRE NOSOTROS</a></li>
           <li class="menu-has-children"><a href="">Servicio</a>
             <ul>
               <li><a href="#">Comidas</a></li>
@@ -121,7 +121,7 @@
     <div class="container wow fadeInUp">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="section-title">About Us</h3>
+          <h3 class="section-title">SOBRE NOSOTROS</h3>
           <div class="section-title-divider"></div>
           <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
         </div>
