--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="container about-container wow fadeInUp">
       <div class="row">
         <div class="col-md-6 col-md-push-6 about-content">
-          <h2 class="about-title">We provide great services and ideass</h2>
+          <h2 class="about-title">Nuestras ideas de proyectos y servicios</h2>
           <p class="about-text">
             En Master Pest, amamos a los animales y entendemos que tu mascota es  parte de tu familia, es por ello que  le brindamos un servicio de calidad, las 24 horas del día los 7 días de la semana.
           </p>
