Se agrego telefono1

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <div class="row">
         <div class="col-md-12">
           <h3 class="section-title">SOBRE NOSOTROS</h3>
-          <a href="tel:+54900167830"></a>Llamame por este link</a>
+          <a href="tel:+54900167830">Llamame por este link</a>
           <div class="section-title-divider"></div>
           <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
         </div>
