--- a/index.html
+++ b/index.html
@@ -124,7 +124,14 @@
           <h3 class="section-title">SOBRE NOSOTROS</h3>
 
           <div class="section-title-divider"></div>
-          <a href="tel:+54900167830">Llamame por este link</a>
+
+          <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone-outgoing" width="36" height="36" viewBox="0 0 24 24" stroke-width="1.5" stroke="#009988" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+  <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+  <line x1="15" y1="9" x2="20" y2="4" />
+  <polyline points="16 4 20 4 20 8" />
+</svg>
+          <a href="tel:+54900167830">Contactame dando clic aquí</a>
         </div>
       </div>
     </div>
