--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="container wow fadeInUp">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="section-title">SOBRE NOSOTROS</h3>
+          <h3 class="section-title">SOBRE NOSOTROS1</h3>
 
           <div class="section-title-divider"></div>
 
